<resources>
    <!--English language-->
    <string name="app_name">Movie &amp; Trailers</string>
    <string name="login_image">Login Image</string>
    <string name="lets_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_github">Continue with Github</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="back_button">Back button</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="e_mail_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with">or continue with</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="onboarding_image">Onboarding image</string>
    <string name="onboarding_gradient">Onboarding gradient</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_mova">Welcome to App Movie &amp; Trailers</string>
    <string name="onboarding_description">The best movie stream ing app of the century to make your days great!</string>
    <string name="app_logo">App logo</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="my_list">My List</string>
    <string name="profile">Profile</string>
    <string name="download">Download</string>
    <string name="error">Error</string>
    <string name="email_or_password_is_not_valid">Email or password is not valid</string>
    <string name="sign_up_success">Sign Up Successful</string>
    <string name="success">Success</string>
    <string name="credantials_error">Credantials Error</string>
    <string name="facebook_application_id">3452963321696571</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">b825f9066fe6b0faddfcf6f185c66f81</string>
    <string name="dialog_image">Dialog image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="successful_sign_in">Your account is ready to use. You will be redirected to the Home page in a few seconds.</string>
    <string name="movie_poster">Movie poster</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="see_all">See all</string>
    <string name="play">Play</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="now_playing_series">Now Playing Series</string>
    <string name="retry">Retry</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>
    <string name="movie">Movie</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="categories">Categories</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="genres">Genres</string>
    <string name="sort">Sort</string>
    <string name="popularity">Popularity</string>
    <string name="latest_release">Latest Release</string>
    <string name="include_adult">Include Adult</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="list_image">List Image</string>
    <string name="empty_list">Your List is Empty</string>
    <string name="empty_list_desc">It seems that you haven\'t added \n any movies or series to the list</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="star">Star</string>
    <string name="view_more">…View More</string>
    <string name="trailers">Trailers</string>
    <string name="comments">Comments</string>
    <string name="images">Images</string>
    <string name="smilar">Smilar</string>
    <string name="download_desc">This Feature is Not Downloading Movie…\nJust Saves to Room Database</string>
    <string name="hide">Hide</string>
    <string name="added_to_list">Added List</string>
    <string name="empty_download_desc">It seems that you haven\'t downloaded \n any movies or series </string>
    <string name="empty_downloads">You Download Nothing</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete this download?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="security">Security</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="english">English</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="movie_trailers"><![CDATA[: Movie & Trailers]]></string>
    <string name="account_name">Account</string>
    <string name="help_center_contact">If you need any help, please contact us immediately</string>
    <string name="support_facebook">Facebook messenger</string>
    <string name="support_zalo">Zalo messenger</string>
    <string name="connect">Connect</string>
    <string name="please_contact_system">Please contact us if you encounter system errors</string>

    <string name="policy_content">Personal Information Collection: \nWe, the development team under the guidance of Hoàng Anh Tiến (nickname: hoangtien2k3), the author of the application, commit to only collect necessary personal information to provide services and enhance user experience. \n\nInformation Usage: \nPersonal information will be used to provide content, update services, and improve user experience, under the guidance and control of the author. \n\nInformation Security: \nWe adhere to appropriate security measures under the guidance of the author to protect users\' personal information from loss or unauthorized access. \n\nInformation Sharing: \nUsers\' personal information will not be shared with any third party without the author\'s consent, except when necessary to provide services and comply with legal regulations. \n\nUser Rights: \nUsers have the right to access, edit, or delete their personal information from our system and may directly send requests or feedback to the author. \n\nLegal Compliance: \nWe commit to comply with regulations and laws on personal data protection and privacy policies under the author\'s supervision. \n\nPolicy Changes: \nThis privacy policy may be updated or modified over time under the author\'s guidance and support of the development team.</string>

</resources>