<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ui.profile.helpcenter.HelpCenterContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <View
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="@color/indicator_color" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/connect"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textFontWeight="700"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="@color/stroke_color" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/please_contact_system"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textFontWeight="700"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/dialog_image"
                    android:src="@drawable/star_yellow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/menuZalo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/rounded_btn"
                        android:backgroundTint="@color/second_btn_bg"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|end"
                            android:layout_marginEnd="10dp"
                            android:gravity="right|end"
                            android:text="@string/support_zalo"
                            android:textAllCaps="false"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="@color/text_color" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/zalo" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/menuFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="30dp"
                    android:layout_marginTop="8dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/rounded_btn"
                        android:backgroundTint="@color/second_btn_bg"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|end"
                            android:layout_marginEnd="10dp"
                            android:gravity="right|end"
                            android:text="@string/support_facebook"
                            android:textAllCaps="false"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:textColor="@color/text_color" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/messenger" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>